--- a/src/scss/app/font.scss
+++ b/src/scss/app/font.scss
@@ -1,7 +1,7 @@
 body {
   // set the variable that we are using in style settings first
-  --red-graphite-interface-font: 'Avenir Next';
-  --red-graphite-text-font: 'Avenir Next';
+  --red-graphite-interface-font: 'Avenir';
+  --red-graphite-text-font: 'Avenir';
   --red-graphite-monospace-font: '';
 
   // then set the obsidian variable with my variable
